# chatbot_eval_framework

./: .env.example  README.md  pyproject.toml  run_eval.py
features/: chatbot.feature
features/steps/: chatbot_steps.py
src/chatbot_eval_pkg/: __init__.py  client.py  evaluator.py  loader.py  metrics.py  types.py
test_data/: sample_multi_turn.json  sample_single_turn.json
tests/: test_chatbot_json.py
